--- a/home.html
+++ b/home.html
@@ -361,7 +361,7 @@
             </div>
             <!-- trending -->
 
-            <div class="features">
+            <div style="display: none;" class="features">
                 <div class="container">
                     <div class="wrapper">
                         <div class="column">
